<resources>
    <string name="app_name">ORGANIZER 2.0</string>
    <string name="title_activity_lista_evento">LISTA DE TAREFAS</string>
    <string name="title_activity_lista_local">LISTA DE EVENTOS</string>
    <string name="tvnome" />
    <string name="etduracao" />
    <string name="etdata" />
    <string name="btsalvar">SALVAR</string>
    <string name="btalterar">ALTERAR</string>
    <string name="btdeletar">DELETAR</string>
    <string name="tvnomeevento" />
    <string name="tvduracaotarefa" />
    <string name="tvdatatarefa" />
    <string name="tvTelaInicial">Cadastro de Tarefas</string>
    <string name="tvdados">Gabriel de Almeida Barros, v2.0</string>
    <string name="tvnometarefa">Tarefa:</string>
    <string name="tvduraçãotarefa">Categoria:</string>
    <string name="tvdatatarefaitem">Hora:</string>
    <string name="google_maps_key">AIzaSyCMJR-F6oDvBFgrtq8RvJtxNgIyPk_9ESU</string>
</resources>
